--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         id: vault-secrets
         uses: hashicorp/vault-action@v2
         with:
-          url: https://vault.rdevops6a.online:8200/
+          url: https://vault.angadicnc.online:8200/
           token: ${{ secrets.vault_token }}
           tlsSkipVerify: true
           secrets: |
