--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
       project_name:
         required: true
         type: string
+        npm_install:
+          required: true
+          type: boolean
     secrets:
       vault_token:
         required: true
@@ -31,6 +34,7 @@ jobs:
 
       - run: npm install
         name: Install NodeJS modules
+        if: ${{ inputs.npm_install }}
 
       - run: echo npm run test:unit
         name: Code Unit Tests
@@ -43,4 +47,3 @@ jobs:
 
       - run: echo OK
         name: Release Software
-#
