--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,3 +57,20 @@ jobs:
           "update_materials_before_scheduling": true
           }' | sed -e "s/app_version/${GITHUB_REF_NAME}/" | jq >data.json
           curl 'http://172.31.35.24:8153/go/api/pipelines/${{ inputs.project_name }}/schedule' -H 'Accept: application/vnd.go.cd.v1+json' -H 'Content-Type: application/json' -X POST -d "@data.json"
+
+#--------------------------------------------------
+# Command line gocd trigger
+#         curl 'http://172.31.35.25:8153/go/api/backend/schedule'\
+#         -H 'Accept: application/vnd.go.cd.v1+json' \
+#         -H 'Content-Type: application/json' \
+#         -X POST \
+#         -d '{
+#              "environment_variables": [
+#                {
+#                 "name": "APP_VERSION",
+#                 "secure": false,
+#                 "value": "app_version"
+#                }
+#              ],
+#              "update_materials_before_scheduling": true
+#            }'
